# sheriff

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sheriff/: __init__.py  core.py  exceptions.py
tests/: __init__.py  conftest.py  test_limiter.py
